--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:ng="http://angularjs.org" id="ng-app" ng-app="forecastApp">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="assets/css/app.css">
 
   </head>
-  <body class="dark">
-  <!-- Semantic HTML5 markup -->
+  <body class="dark" ng-controller="locationController">
+
     <header role="banner" class="branding">
       <div class="container">
         <div class="row">
@@ -39,49 +39,27 @@
                 <h1>Weather Forecast</h1>
               </a>
             </div>
-            <input type="text" class="location" name="location" placeholder="Enter the City, State" />
+            <input type="text" ng-model="location" class="location" name="location" placeholder="Enter zip code" />
           </div>
         </div>
       </div>
-    </header><!-- /header -->
+    </header>
 
     <div class="container">
       <div class="row">
 
+        <alert ng-if="alert" type="{{alert.type}}">
+          <p>{{alert.message}}</p>
+        </alert>
+
+        <h3 class="note">Please note that this is a work in progress and the zip code is currently hard coded into the API call, so the input field does not work (Next Step).</h3>
+
         <div class="col-sm-8 forecast--main">
-          <div class="forecast">
-            <p class="forecast--city">Stratford, Connecticut</p>
-            <p class="forecast--date">Mon, Sep 8, 2014, 12:31 pm</p>
-            <h2 class="forecast--temp">63˚<small>/47˚</small></h2>
-            <div class="forecast--icon partlycloudy"></div>
-          </div>
+          <div today></div>
         </div>
 
         <div class="col-sm-4 forecast--sidebar">
-
-          <div class="x-forecast 2">
-            <p class="x-forecast--date">Tue, Sep 9, 2014</p>
-            <div class="row">
-              <div class="x-forecast--temp">71˚<small>/56˚</small></div>
-              <div class="x-forecast--icon sunny"></div>
-            </div>
-          </div>
-
-          <div class="x-forecast 3">
-            <p class="x-forecast--date">Wed, Sep 10, 2014</p>
-            <div class="row">
-              <div class="x-forecast--temp">68˚<small>/51˚</small></div>
-              <div class="x-forecast--icon raining"></div>
-            </div>
-          </div>
-
-          <div class="x-forecast 4">
-            <p class="x-forecast--date">Thu, Sep 11, 2014</p>
-            <div class="row">
-              <div class="x-forecast--temp">66˚<small>/49˚</small></div>
-              <div class="x-forecast--icon lightning"></div>
-            </div>
-          </div>
+          <div forecast></div>
         </div>
       </div>
     </div>
@@ -94,7 +72,8 @@
         </div>
       </div>
     </footer>
-    <!-- vendor js   -->
+    <!-- vendor js -->
+    <script src="assets/js/vendors/angular.min.js"></script>
     <script src="assets/js/vendors/jquery.min.js"></script>
     <script src="assets/js/vendors/jquery.backstretch.min.js"></script>
 
